--- a/AutoMall/ViewControllers/Upkeep/CarInfoAddVC.xib
+++ b/AutoMall/ViewControllers/Upkeep/CarInfoAddVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="17B48" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -110,7 +110,6 @@
                                             </constraints>
                                             <state key="normal" image="photoBtn"/>
                                             <connections>
-                                                <action selector="enginePhoto:" destination="-1" eventType="touchUpInside" id="TPz-sL-ESV"/>
                                                 <action selector="mileagePhoto:" destination="-1" eventType="touchUpInside" id="N6A-HI-Brm"/>
                                             </connections>
                                         </button>
@@ -153,7 +152,6 @@
                                             </constraints>
                                             <state key="normal" image="photoBtn"/>
                                             <connections>
-                                                <action selector="enginePhoto:" destination="-1" eventType="touchUpInside" id="ozy-Kg-NAV"/>
                                                 <action selector="fuelAmountPhoto:" destination="-1" eventType="touchUpInside" id="EFi-NZ-i9q"/>
                                             </connections>
                                         </button>
