--- a/AutoMall/ViewControllers/Upkeep/CheckResultOtherCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/CheckResultOtherCell.xib
@@ -24,8 +24,8 @@
                         <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2017-11-17" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lMa-vu-DHf">
-                        <rect key="frame" x="16" y="30" width="71.5" height="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lMa-vu-DHf">
+                        <rect key="frame" x="16" y="47" width="0.0" height="0.0"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -36,8 +36,8 @@
                         <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2017-05-17" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gJ3-uy-wsf">
-                        <rect key="frame" x="228" y="30" width="75.5" height="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gJ3-uy-wsf">
+                        <rect key="frame" x="303.5" y="47" width="0.0" height="0.0"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -172,28 +172,30 @@
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="qqk-rq-YqD" firstAttribute="top" secondItem="SUC-AV-Ta0" secondAttribute="bottom" constant="5" id="0Jo-f5-VtI"/>
                     <constraint firstAttribute="trailing" secondItem="bZE-j4-ZfJ" secondAttribute="trailing" constant="5" id="2Kp-Ml-Gw3"/>
-                    <constraint firstItem="2zr-GT-gjl" firstAttribute="top" secondItem="yV0-c6-WaU" secondAttribute="bottom" constant="5" id="2y8-Sh-gDX"/>
                     <constraint firstAttribute="trailing" secondItem="SUC-AV-Ta0" secondAttribute="trailing" constant="16" id="3qP-UL-CQb"/>
                     <constraint firstItem="BSY-zr-7NX" firstAttribute="top" secondItem="gJ3-uy-wsf" secondAttribute="bottom" constant="8" id="6AM-HZ-38B"/>
                     <constraint firstItem="SUC-AV-Ta0" firstAttribute="top" secondItem="6yK-3H-qG8" secondAttribute="bottom" constant="8" id="6O1-ny-Zua"/>
+                    <constraint firstItem="KGW-pG-Ncv" firstAttribute="top" secondItem="iQY-2J-JAJ" secondAttribute="bottom" constant="5" id="6wj-i9-eT8"/>
                     <constraint firstItem="yV0-c6-WaU" firstAttribute="top" secondItem="BSY-zr-7NX" secondAttribute="bottom" constant="8" id="7dz-aF-ilG"/>
                     <constraint firstItem="HJe-cE-02t" firstAttribute="centerY" secondItem="qqk-rq-YqD" secondAttribute="centerY" id="86w-XN-i6e"/>
                     <constraint firstAttribute="trailing" secondItem="gJ3-uy-wsf" secondAttribute="trailing" constant="16" id="8xf-Wy-EUi"/>
                     <constraint firstItem="CR0-BO-tfP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="8z3-9f-GRV"/>
                     <constraint firstItem="6yK-3H-qG8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="9Eb-dE-ZDB"/>
-                    <constraint firstItem="HG2-Ef-UVz" firstAttribute="top" secondItem="OQt-cL-pbQ" secondAttribute="bottom" constant="-7" id="Ghl-Ee-WIT"/>
                     <constraint firstItem="Wgq-S5-6BS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="Hhx-e9-0fL"/>
+                    <constraint firstItem="6yK-3H-qG8" firstAttribute="top" secondItem="A81-3F-vbm" secondAttribute="bottom" constant="-1.5" id="I0X-Pe-CHO"/>
                     <constraint firstItem="KGW-pG-Ncv" firstAttribute="centerY" secondItem="CR0-BO-tfP" secondAttribute="centerY" id="I4d-If-6Ee"/>
-                    <constraint firstItem="2zr-GT-gjl" firstAttribute="top" secondItem="yV0-c6-WaU" secondAttribute="bottom" constant="5" id="IWM-Ax-aE3"/>
                     <constraint firstItem="pAE-0w-VVP" firstAttribute="leading" secondItem="OQt-cL-pbQ" secondAttribute="trailing" constant="2" id="J6Q-Mc-tcy"/>
                     <constraint firstItem="fek-Pc-FXk" firstAttribute="leading" secondItem="2zr-GT-gjl" secondAttribute="trailing" constant="2" id="Kdc-wc-xXp"/>
                     <constraint firstAttribute="trailing" secondItem="fek-Pc-FXk" secondAttribute="trailing" constant="16" id="LFA-sn-tEX"/>
                     <constraint firstItem="HJe-cE-02t" firstAttribute="leading" secondItem="qqk-rq-YqD" secondAttribute="trailing" constant="2" id="M1u-4z-muK"/>
+                    <constraint firstItem="pAE-0w-VVP" firstAttribute="top" secondItem="Wgq-S5-6BS" secondAttribute="bottom" constant="5" id="M98-eI-BSV"/>
+                    <constraint firstItem="HJe-cE-02t" firstAttribute="top" secondItem="SUC-AV-Ta0" secondAttribute="bottom" constant="5" id="Qhz-Xf-wVN"/>
                     <constraint firstItem="OQt-cL-pbQ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="Smc-l6-d7A"/>
+                    <constraint firstItem="6yK-3H-qG8" firstAttribute="top" secondItem="HG2-Ef-UVz" secondAttribute="bottom" constant="-2" id="VK0-Jb-iR1"/>
                     <constraint firstItem="BSY-zr-7NX" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="ViS-qh-xMe"/>
                     <constraint firstAttribute="trailing" secondItem="amx-hO-dB3" secondAttribute="trailing" constant="16" id="WUG-FZ-CVH"/>
+                    <constraint firstItem="fek-Pc-FXk" firstAttribute="top" secondItem="yV0-c6-WaU" secondAttribute="bottom" constant="5" id="X1d-K7-Cfi"/>
                     <constraint firstItem="fek-Pc-FXk" firstAttribute="centerY" secondItem="2zr-GT-gjl" secondAttribute="centerY" id="XM4-dG-IRb"/>
                     <constraint firstAttribute="trailing" secondItem="yV0-c6-WaU" secondAttribute="trailing" constant="16" id="ZCz-hJ-aP6"/>
                     <constraint firstAttribute="trailing" secondItem="A81-3F-vbm" secondAttribute="trailing" constant="5" id="ZZK-AY-kkM"/>
@@ -201,22 +203,19 @@
                     <constraint firstItem="iQY-2J-JAJ" firstAttribute="top" secondItem="6yK-3H-qG8" secondAttribute="bottom" constant="8" id="ahR-ae-j7r"/>
                     <constraint firstItem="Wgq-S5-6BS" firstAttribute="top" secondItem="BSY-zr-7NX" secondAttribute="bottom" constant="8" id="bil-r6-2F1"/>
                     <constraint firstItem="HG2-Ef-UVz" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="6" id="cZd-ZO-cY1"/>
-                    <constraint firstItem="qqk-rq-YqD" firstAttribute="top" secondItem="SUC-AV-Ta0" secondAttribute="bottom" constant="5" id="cmw-gA-Rnx"/>
                     <constraint firstItem="iQY-2J-JAJ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="dq4-qa-SPq"/>
-                    <constraint firstItem="A81-3F-vbm" firstAttribute="top" secondItem="2zr-GT-gjl" secondAttribute="bottom" constant="-7" id="ezU-IS-0VR"/>
                     <constraint firstItem="BSY-zr-7NX" firstAttribute="top" secondItem="lMa-vu-DHf" secondAttribute="bottom" constant="8" id="fKP-s3-5pK"/>
                     <constraint firstItem="KGW-pG-Ncv" firstAttribute="leading" secondItem="CR0-BO-tfP" secondAttribute="trailing" constant="2" id="frm-tv-NuA"/>
                     <constraint firstItem="bZE-j4-ZfJ" firstAttribute="top" secondItem="qqk-rq-YqD" secondAttribute="bottom" constant="-7" id="g35-JJ-a72"/>
+                    <constraint firstItem="YwO-9d-78O" firstAttribute="top" secondItem="KGW-pG-Ncv" secondAttribute="bottom" constant="-7.5" id="gua-qj-Opg"/>
                     <constraint firstItem="Nwm-Gu-oSf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="hVj-GI-KnM"/>
                     <constraint firstItem="6yK-3H-qG8" firstAttribute="top" secondItem="BSY-zr-7NX" secondAttribute="bottom" constant="78" id="kW6-Wb-mNl"/>
                     <constraint firstItem="YwO-9d-78O" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="ld9-sH-mQM"/>
-                    <constraint firstItem="YwO-9d-78O" firstAttribute="top" secondItem="CR0-BO-tfP" secondAttribute="bottom" constant="-7.5" id="mla-L1-cSZ"/>
                     <constraint firstItem="pAE-0w-VVP" firstAttribute="centerY" secondItem="OQt-cL-pbQ" secondAttribute="centerY" id="oXs-8S-Jei"/>
                     <constraint firstItem="amx-hO-dB3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="pOz-md-Y84"/>
                     <constraint firstItem="lMa-vu-DHf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="qTy-kF-cTT"/>
                     <constraint firstAttribute="trailing" secondItem="HJe-cE-02t" secondAttribute="trailing" constant="16" id="sHv-0K-3QW"/>
-                    <constraint firstItem="CR0-BO-tfP" firstAttribute="top" secondItem="iQY-2J-JAJ" secondAttribute="bottom" constant="5" id="uFz-65-G9T"/>
-                    <constraint firstItem="OQt-cL-pbQ" firstAttribute="top" secondItem="Wgq-S5-6BS" secondAttribute="bottom" constant="5" id="yRq-Q2-269"/>
+                    <constraint firstItem="bZE-j4-ZfJ" firstAttribute="top" secondItem="HJe-cE-02t" secondAttribute="bottom" constant="-7" id="x30-5l-Qa3"/>
                     <constraint firstAttribute="trailing" secondItem="BSY-zr-7NX" secondAttribute="trailing" id="yk8-hP-Q4g"/>
                     <constraint firstAttribute="trailing" secondItem="6yK-3H-qG8" secondAttribute="trailing" id="zE7-mV-Adk"/>
                     <constraint firstItem="Nwm-Gu-oSf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="zO3-kf-doy"/>
