--- a/AutoMall/ViewControllers/PersonalCenter/MailOrderMultiCell.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/MailOrderMultiCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="17B48" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -21,7 +21,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RiY-iw-dmw">
                         <rect key="frame" x="0.0" y="32" width="320" height="75"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EdE-Jy-Edl">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EdE-Jy-Edl">
                                 <rect key="frame" x="16" y="7.5" width="288" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="lOK-p1-GZ3"/>
@@ -143,7 +143,7 @@
                 <outlet property="picScrollView" destination="EdE-Jy-Edl" id="Fz4-CZ-6tO"/>
                 <outlet property="statusL" destination="aC5-XT-BtE" id="nrP-W3-5gS"/>
             </connections>
-            <point key="canvasLocation" x="-337" y="33"/>
+            <point key="canvasLocation" x="-131" y="3"/>
         </tableViewCell>
     </objects>
     <resources>
