--- a/AutoMall/ViewControllers/PersonalCenter/HeadNameCell.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/HeadNameCell.xib
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="79.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="center_profile" translatesAutoresizingMaskIntoConstraints="NO" id="4EI-uQ-Kdu" customClass="WPImageView">
@@ -86,6 +86,13 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrows" translatesAutoresizingMaskIntoConstraints="NO" id="Lp3-AS-aFc">
+                        <rect key="frame" x="182" y="50" width="6" height="11"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="11" id="ROd-ZE-HjB"/>
+                            <constraint firstAttribute="width" constant="6" id="n9X-kd-FXC"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="4EI-uQ-Kdu" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="5p3-zT-2Z0"/>
@@ -95,7 +102,9 @@
                     <constraint firstItem="kXB-f4-Q3E" firstAttribute="centerY" secondItem="Caf-U9-tpv" secondAttribute="centerY" id="C9S-dn-H2N"/>
                     <constraint firstAttribute="bottom" secondItem="cpc-Qw-hH1" secondAttribute="bottom" constant="8" id="Cnd-eB-UhK"/>
                     <constraint firstItem="IWA-yT-KfU" firstAttribute="leading" secondItem="4EI-uQ-Kdu" secondAttribute="trailing" constant="16" id="LCl-Cy-HB6"/>
+                    <constraint firstItem="Lp3-AS-aFc" firstAttribute="leading" secondItem="kXB-f4-Q3E" secondAttribute="trailing" constant="8" id="SvE-lf-2u6"/>
                     <constraint firstItem="gbz-tC-hl3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="ZyL-c0-5Sf"/>
+                    <constraint firstItem="Lp3-AS-aFc" firstAttribute="centerY" secondItem="kXB-f4-Q3E" secondAttribute="centerY" id="c2N-T5-9EW"/>
                     <constraint firstItem="IWA-yT-KfU" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="f22-Ts-GOA"/>
                     <constraint firstAttribute="bottom" secondItem="Caf-U9-tpv" secondAttribute="bottom" constant="8" id="g0m-3Q-JDC"/>
                     <constraint firstItem="gbz-tC-hl3" firstAttribute="leading" secondItem="4EI-uQ-Kdu" secondAttribute="trailing" constant="16" id="gC1-wO-Yrj"/>
@@ -115,6 +124,7 @@
                 <outlet property="loginL" destination="IWA-yT-KfU" id="5nk-BD-o8M"/>
                 <outlet property="shopLevelIM" destination="kXB-f4-Q3E" id="4D7-e0-XvH"/>
                 <outlet property="shopNameBtn" destination="Caf-U9-tpv" id="WEF-q5-8wy"/>
+                <outlet property="shopNameIM" destination="Lp3-AS-aFc" id="2JC-bc-2BN"/>
             </connections>
             <point key="canvasLocation" x="-499" y="-169"/>
         </tableViewCell>
