--- a/AutoMall/ViewControllers/PersonalCenter/UpkeepStatementVC.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/UpkeepStatementVC.xib
@@ -30,65 +30,6 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Pm-l1-IWf">
-                    <rect key="frame" x="0.0" y="64" width="375" height="603"/>
-                    <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="paG-cw-wJm">
-                            <rect key="frame" x="10" y="8" width="60" height="30"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="60" id="FsP-VS-Ecl"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                            <state key="normal" title="上月">
-                                <color key="titleColor" red="0.92941176470588238" green="0.10980392156862745" blue="0.14117647058823529" alpha="1" colorSpace="calibratedRGB"/>
-                            </state>
-                            <connections>
-                                <action selector="lastMonth:" destination="-1" eventType="touchUpInside" id="KE2-NY-msC"/>
-                            </connections>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="508-DE-Fed">
-                            <rect key="frame" x="305" y="8" width="60" height="30"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="60" id="JiZ-Pa-5BP"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                            <state key="normal" title="下月">
-                                <color key="titleColor" red="0.92941176469999998" green="0.10980392160000001" blue="0.14117647059999999" alpha="1" colorSpace="calibratedRGB"/>
-                            </state>
-                            <connections>
-                                <action selector="nextMonth:" destination="-1" eventType="touchUpInside" id="kmG-k2-3PL"/>
-                            </connections>
-                        </button>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2017年9月" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KX8-tK-o7b">
-                            <rect key="frame" x="146" y="12" width="82.5" height="21"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bH3-qB-4Nc">
-                            <rect key="frame" x="0.0" y="43" width="375" height="0.5"/>
-                            <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="1" id="D0p-f3-kg3"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                    </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstItem="KX8-tK-o7b" firstAttribute="top" secondItem="5Pm-l1-IWf" secondAttribute="top" constant="12" id="2Ew-Vd-TJI"/>
-                        <constraint firstItem="508-DE-Fed" firstAttribute="centerY" secondItem="KX8-tK-o7b" secondAttribute="centerY" id="9Ej-sF-viV"/>
-                        <constraint firstAttribute="trailing" secondItem="508-DE-Fed" secondAttribute="trailing" constant="10" id="CmS-77-jUN"/>
-                        <constraint firstAttribute="trailing" secondItem="bH3-qB-4Nc" secondAttribute="trailing" id="Fzy-ae-3R9"/>
-                        <constraint firstItem="bH3-qB-4Nc" firstAttribute="top" secondItem="508-DE-Fed" secondAttribute="bottom" constant="5" id="P7U-mV-H9g"/>
-                        <constraint firstItem="bH3-qB-4Nc" firstAttribute="leading" secondItem="5Pm-l1-IWf" secondAttribute="leading" id="Rta-bH-lAd"/>
-                        <constraint firstItem="KX8-tK-o7b" firstAttribute="centerX" secondItem="5Pm-l1-IWf" secondAttribute="centerX" id="f9h-lv-njx"/>
-                        <constraint firstItem="paG-cw-wJm" firstAttribute="centerY" secondItem="KX8-tK-o7b" secondAttribute="centerY" id="orl-zF-RQX"/>
-                        <constraint firstItem="paG-cw-wJm" firstAttribute="leading" secondItem="5Pm-l1-IWf" secondAttribute="leading" constant="10" id="svv-lR-oHS"/>
-                    </constraints>
-                </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dTX-Id-pEs">
                     <rect key="frame" x="0.0" y="64" width="375" height="44"/>
                     <subviews>
@@ -179,10 +120,12 @@
                                 <constraint firstAttribute="height" constant="2" id="Vqp-HQ-31g"/>
                             </constraints>
                         </view>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MIB-tm-Sz7">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MIB-tm-Sz7">
                             <rect key="frame" x="0.0" y="43.5" width="375" height="0.5"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                            <color key="backgroundColor" red="0.7843137255" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="1" id="AzU-L0-EAD" customClass="NSLayoutConstraintOnePixelLine"/>
+                            </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -205,15 +148,77 @@
                         <constraint firstItem="HQg-LA-PwL" firstAttribute="width" secondItem="RM6-VI-SSi" secondAttribute="width" id="WIf-JE-Ch0"/>
                         <constraint firstAttribute="bottom" secondItem="7W9-ZE-3Qy" secondAttribute="bottom" id="aNy-cv-8KK"/>
                         <constraint firstItem="HQg-LA-PwL" firstAttribute="top" secondItem="dTX-Id-pEs" secondAttribute="top" constant="7" id="aeO-uZ-Ws4"/>
+                        <constraint firstAttribute="bottom" secondItem="MIB-tm-Sz7" secondAttribute="bottom" id="bgZ-5y-lXN"/>
                         <constraint firstItem="7W9-ZE-3Qy" firstAttribute="centerX" secondItem="pPs-PY-TLA" secondAttribute="centerX" id="djf-fh-x54"/>
                         <constraint firstAttribute="bottom" secondItem="lnS-rF-LUw" secondAttribute="bottom" id="eLQ-8E-SMe"/>
                         <constraint firstItem="pPs-PY-TLA" firstAttribute="top" secondItem="dTX-Id-pEs" secondAttribute="top" constant="7" id="fIT-y2-40T"/>
+                        <constraint firstItem="MIB-tm-Sz7" firstAttribute="leading" secondItem="dTX-Id-pEs" secondAttribute="leading" id="izG-tw-CQa"/>
                         <constraint firstItem="ja4-kt-CkK" firstAttribute="height" secondItem="RM6-VI-SSi" secondAttribute="height" id="jIc-hA-llZ"/>
                         <constraint firstItem="pPs-PY-TLA" firstAttribute="height" secondItem="RM6-VI-SSi" secondAttribute="height" id="jYh-fD-HUz"/>
                         <constraint firstItem="pPs-PY-TLA" firstAttribute="width" secondItem="RM6-VI-SSi" secondAttribute="width" id="kx6-XW-RUf"/>
                         <constraint firstAttribute="bottom" secondItem="kg3-og-Ewn" secondAttribute="bottom" id="ma7-nP-IvG"/>
+                        <constraint firstAttribute="trailing" secondItem="MIB-tm-Sz7" secondAttribute="trailing" id="p5k-Qj-HG2"/>
                         <constraint firstItem="WYy-kg-JUU" firstAttribute="centerX" secondItem="ja4-kt-CkK" secondAttribute="centerX" id="pDv-rP-QGf"/>
                         <constraint firstAttribute="bottom" secondItem="WYy-kg-JUU" secondAttribute="bottom" id="v2z-ab-txs"/>
+                    </constraints>
+                </view>
+                <view alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Pm-l1-IWf">
+                    <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="paG-cw-wJm">
+                            <rect key="frame" x="10" y="8" width="60" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="60" id="FsP-VS-Ecl"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <state key="normal" title="上月">
+                                <color key="titleColor" red="0.92941176470588238" green="0.10980392156862745" blue="0.14117647058823529" alpha="1" colorSpace="calibratedRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="lastMonth:" destination="-1" eventType="touchUpInside" id="KE2-NY-msC"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="508-DE-Fed">
+                            <rect key="frame" x="305" y="8" width="60" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="60" id="JiZ-Pa-5BP"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <state key="normal" title="下月">
+                                <color key="titleColor" red="0.92941176469999998" green="0.10980392160000001" blue="0.14117647059999999" alpha="1" colorSpace="calibratedRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="nextMonth:" destination="-1" eventType="touchUpInside" id="kmG-k2-3PL"/>
+                            </connections>
+                        </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2017年9月" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KX8-tK-o7b">
+                            <rect key="frame" x="146" y="12" width="82.5" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bH3-qB-4Nc">
+                            <rect key="frame" x="0.0" y="43" width="375" height="0.5"/>
+                            <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="1" id="D0p-f3-kg3"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstItem="KX8-tK-o7b" firstAttribute="top" secondItem="5Pm-l1-IWf" secondAttribute="top" constant="12" id="2Ew-Vd-TJI"/>
+                        <constraint firstItem="508-DE-Fed" firstAttribute="centerY" secondItem="KX8-tK-o7b" secondAttribute="centerY" id="9Ej-sF-viV"/>
+                        <constraint firstAttribute="trailing" secondItem="508-DE-Fed" secondAttribute="trailing" constant="10" id="CmS-77-jUN"/>
+                        <constraint firstAttribute="trailing" secondItem="bH3-qB-4Nc" secondAttribute="trailing" id="Fzy-ae-3R9"/>
+                        <constraint firstItem="bH3-qB-4Nc" firstAttribute="top" secondItem="508-DE-Fed" secondAttribute="bottom" constant="5" id="P7U-mV-H9g"/>
+                        <constraint firstItem="bH3-qB-4Nc" firstAttribute="leading" secondItem="5Pm-l1-IWf" secondAttribute="leading" id="Rta-bH-lAd"/>
+                        <constraint firstItem="KX8-tK-o7b" firstAttribute="centerX" secondItem="5Pm-l1-IWf" secondAttribute="centerX" id="f9h-lv-njx"/>
+                        <constraint firstItem="paG-cw-wJm" firstAttribute="centerY" secondItem="KX8-tK-o7b" secondAttribute="centerY" id="orl-zF-RQX"/>
+                        <constraint firstItem="paG-cw-wJm" firstAttribute="leading" secondItem="5Pm-l1-IWf" secondAttribute="leading" constant="10" id="svv-lR-oHS"/>
                     </constraints>
                 </view>
             </subviews>
